@@ -1,7 +1,25 @@
 <html>
 <head>
-<script src="../../../../../http/tests/cookies/resources/resetCookies.js"></script>
 <script>
+function resetCookies()
+{
+    if (window.testRunner)
+        testRunner.setAlwaysAcceptCookies(true);
+
+    // Due to cross-origin restrictions, we can only (simply) reset cookies for our current origin.
+    var url = "http://localhost:8000/cookies/resources/cookie-utility.php?queryfunction=deleteCookies";
+    var req = new XMLHttpRequest();
+    try {
+        req.open('GET', url, false);
+        req.send();
+    } catch (e) {
+        alert("Attempt to clear " + url + " cookies might have failed.  Test results might be off from here on out. (" + e + ")");
+    }
+
+    if (window.testRunner)
+        testRunner.setAlwaysAcceptCookies(false);
+}
+
 resetCookies();
 
 if (window.testRunner) {
